--- a/StreamIt/Podfile
+++ b/StreamIt/Podfile
@@ -1,10 +1,14 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
+use_frameworks!
 
 target 'StreamIt' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
 
   # Pods for StreamIt
   pod "GCDWebServer", "~> 3.0"
+end
+
+target 'STDatabase' do
+  pod "RealmSwift"
 end
