Added asyncronous HTTP hello world framework, fixed (hopefully) remaining Swift 3.0->2.3 issues

--- a/StreamIt/Podfile
+++ b/StreamIt/Podfile
@@ -6,9 +6,12 @@ target 'StreamIt' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
 
   # Pods for StreamIt
-  pod "GCDWebServer", "~> 3.0"
 end
 
 target 'STDatabase' do
   pod "RealmSwift"
+end
+
+target 'STHTTPServer' do
+  pod "GCDWebServer", "~> 3.0"
 end
