--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-StreamIt/Pods/*
+Chipmunk/Pods/
 
 ## Build generated
 build/
